--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <li><img class="contact_images" src="images/mail.png">gubar.daniil228@gmail.com</li>
                         <li><img class="contact_images" src="images/tel.png">+7 (916) 489 07 44 (Telegram, WhatsApp, Viber)</li>
                         <li><img class="contact_images" src="images/loc.png">Moscow</li>
+                        <li><img class="contact_images" src="images/birthday.png">02/06/2001</li>
                     </ul>
                 </div>
             </div>
