--- a/index.html
+++ b/index.html
@@ -48,6 +48,66 @@
                     </ul>
                 </div>
             </div>
+            <div class="knoweledge">
+                <h2>Skills</h2>
+                <div class="underline">
+                    <div class="red_line"></div>
+                    <div class="white_line"></div>
+                </div>
+                <div class="knoweledge-list">
+                    <div class="langs_prog">
+                        <ul>
+                            <li><img src="images/html.png"> HTML5</li>
+                            <li><img src="images/css.png"> CSS3</li>
+                            <li><img src="images/js.png"> JS</li>
+                            <li><img src="images/git.png"> Git</li>
+                            <li><img src="images/webpack.png"> Webpack</li>
+                            <li><img src="images/ps.png"> PS</li>
+                            <li><img src="images/figma.png"> Figma</li>
+                            <li><img src="images/java.png"> Java</li>
+                            <li><img src="images/c++.png"> C++</li>
+                        </ul>
+                    </div>
+                    <div class="skills_line">
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 250px"></div>
+                            <div class="white_line_skill" style="width: 100px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 200px"></div>
+                            <div class="white_line_skill" style="width: 150px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 150px"></div>
+                            <div class="white_line_skill" style="width: 200px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 175px"></div>
+                            <div class="white_line_skill" style="width: 175px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 100px"></div>
+                            <div class="white_line_skill" style="width: 250px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 250px"></div>
+                            <div class="white_line_skill" style="width: 100px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 175px"></div>
+                            <div class="white_line_skill" style="width: 175px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 120px"></div>
+                            <div class="white_line_skill" style="width: 230px"></div>
+                        </div>
+                        <div class="underline_skill">
+                            <div class="red_line_skill" style="width: 175px"></div>
+                            <div class="white_line_skill" style="width: 175px"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="right-side">
 
