--- a/index.html
+++ b/index.html
@@ -110,7 +110,76 @@
             </div>
         </div>
         <div class="right-side">
-
+            <div class="education">
+                <h1>Education</h1>
+                <div class="underline">
+                    <div class="red_line"></div>
+                    <div class="white_line"></div>
+                </div>
+                <div class="education-list">
+                    <ul>
+                        <li>Kharkiv Computer and Technological College(2017-2021)</br> Maintenance of software systems and systems</li>
+                        <li>Study in IT Step (Diploma KHMA-012244)</br> Programmer (Feb 2014 - Jan 2019)</li>
+                        <li>Study in SourceIT Basics of programming (Aug 2019 - Sep 2019)</li>
+                        <li>National Technical University «Kharkiv Polytechnic Institute»</br> 123 - Computer Engineering </br> Modern programming, mobile devices and computer games(Bachelor, "Innovation camp") (Sep 2021 - Jul 2024)</li>
+                        <li>Study in SkillFactory </br> Specialization "Frontend developer" (Sep 2021 - Apr 2022)</li>
+                        <li>Individual English classes (Sep 2018 - now)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="expirience-list">
+                <h1>Expirience</h1>
+                <div class="underline">
+                    <div class="red_line"></div>
+                    <div class="white_line"></div>
+                </div>
+                <div class="git_exp">
+                    <p class="github">GitHub works</p>
+                    <form action="https://github.com/Rejoxi?tab=repositories" target="_blank">
+                        <button class="git_button">watch works</button>
+                    </form>
+                </div>
+            </div>
+            <div class="hobby">
+                <h1>Hobby</h1>
+                <div class="underline">
+                    <div class="red_line"></div>
+                    <div class="white_line"></div>
+                </div>
+                <div class="hobby-list">
+                    <div class="hobby_list_games">
+                        <img src="images/games.png">
+                        <p>Games</p>
+                    </div>
+                    <div class="hobby_list_books">
+                        <img src="images/book.png">
+                        <p>Books</p>
+                    </div>
+                    <div class="hobby_list_cycling">
+                        <img src="images/cycling.png">
+                        <p>Cycling</p>
+                    </div>
+                    <div class="hobby_list_gym">
+                        <img src="images/gym.png">
+                        <p>Gym</p>
+                    </div>
+                    <div class="hobby_list_swimming">
+                        <img src="images/swimming.png">
+                        <p>Swimming</p>
+                    </div>
+                </div>
+            </div>
+            <div class="add_information">
+                <h1>Additional information</h1>
+                <div class="underline">
+                    <div class="red_line"></div>
+                    <div class="white_line"></div>
+                </div>
+                <div class="driving_licence">
+                    <img src="images/licence.png">
+                    <p>Driving licence 25.06.2019 Category B</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
