--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img class="face" src="images/face.png">
                 <div class="name_surname">
                     <h1>DANYLO HUBAR</h1>
-                    <h3>Front-end developer</h3>
+                    <h3>Frontend developer</h3>
                 </div>
             </div>
             <div class="personal_qualities">
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="expirience-list">
-                <h1>Expirience</h1>
+                <h1>Experience</h1>
                 <div class="underline">
                     <div class="red_line"></div>
                     <div class="white_line"></div>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="hobby">
-                <h1>Hobby</h1>
+                <h1>Hobbies</h1>
                 <div class="underline">
                     <div class="red_line"></div>
                     <div class="white_line"></div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="hobby_list_swimming">
                         <img src="images/swimming.png">
-                        <p>Swimming</p>
+                        <p>Swim</p>
                     </div>
                 </div>
             </div>
