--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img class="face" src="images/face.png">
                 <div class="name_surname">
                     <h1>DANYLO HUBAR</h1>
-                    <h3>Frontend developer</h3>
+                    <h3> Junior Frontend developer</h3>
                 </div>
             </div>
             <div class="personal_qualities">
